Possibly working Firedrake tutorials.

--- a/04-burgers.ipynb
+++ b/04-burgers.ipynb
@@ -51,6 +51,12 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "# Load Firedrake on Colab\n",
+    "try:\n",
+    "    import firedrake\n",
+    "except ImportError:\n",
+    "    !wget \"https://fem-on-colab.github.io/releases/firedrake-install-real.sh\" -O \"/tmp/firedrake-install.sh\" && bash \"/tmp/firedrake-install.sh\"\n",
+    "    import firedrake\n",
     "from firedrake import *\n",
     "\n",
     "n = 100\n",
