--- a/06-pde-constrained-optimisation.ipynb
+++ b/06-pde-constrained-optimisation.ipynb
@@ -37,6 +37,12 @@
    "source": [
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
+    "# Load Firedrake on Colab\n",
+    "try:\n",
+    "    import firedrake\n",
+    "except ImportError:\n",
+    "    !wget \"https://fem-on-colab.github.io/releases/firedrake-install-real.sh\" -O \"/tmp/firedrake-install.sh\" && bash \"/tmp/firedrake-install.sh\"\n",
+    "    import firedrake\n",
     "from firedrake import *"
    ]
   },
