--- a/03-elasticity.ipynb
+++ b/03-elasticity.ipynb
@@ -49,6 +49,12 @@
    "source": [
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
+    "# Load Firedrake on Colab\n",
+    "try:\n",
+    "    import firedrake\n",
+    "except ImportError:\n",
+    "    !wget \"https://fem-on-colab.github.io/releases/firedrake-install-real.sh\" -O \"/tmp/firedrake-install.sh\" && bash \"/tmp/firedrake-install.sh\"\n",
+    "    import firedrake\n",
     "from firedrake import *\n",
     "length = 1\n",
     "width = 0.2\n",
