--- a/03-elasticity.ipynb
+++ b/03-elasticity.ipynb
@@ -16,7 +16,7 @@
     "with\n",
     "$$ \\DeclareMathOperator{\\Tr}{Tr}\n",
     "\\text{the stress tensor}\\quad \\sigma := \\lambda \\Tr(\\epsilon)\\mathbb{I} + 2\\mu\\epsilon\\\\\n",
-    "\\text{and the symmetric strain rate tensor}\\quad   \\epsilon := \\frac{1}{2}\\left(\\nabla u + (\\nabla u)^T\\right), $$\n",
+    "\\text{and the symmetric strain tensor}\\quad   \\epsilon := \\frac{1}{2}\\left(\\nabla u + (\\nabla u)^T\\right), $$\n",
     "where $u$ is the unknown vector displacement field, and $\\mu$ and $\\lambda$ are the Lamè parameters.\n",
     "\n",
     "As before, the variational formulation consists of multiplying by a test function in some suitable finite element space, $v \\in V$, and integrating.  Note that this time, the solution $u$, and hence the test space $V$ are *vector*-valued (so multiplication actually means taking the inner product).\n",
@@ -241,6 +241,11 @@
     "    mu = Constant(1)\n",
     "    lambda_ = Constant(0.25)\n",
     "    Id = Identity(mesh.geometric_dimension()) # 2x2 Identity tensor\n",
+    "    def epsilon(u):\n",
+    "        return 0.5*(grad(u) + grad(u).T)\n",
+    "\n",
+    "    def sigma(u):\n",
+    "        return lambda_*div(u)*Id + 2*mu*epsilon(u)    \n",
     "    \n",
     "    bc = DirichletBC(V, Constant([0, 0]), 1)\n",
     "    u = TrialFunction(V)\n",
@@ -288,7 +293,6 @@
     "                                         \"ksp_max_it\": 100, \n",
     "                                         \"pc_type\": \"gamg\",\n",
     "                                         \"mg_levels_pc_type\": \"sor\",\n",
-    "                                         \"mat_type\": \"aij\",\n",
     "                                         \"ksp_converged_reason\": None})"
    ]
   },
@@ -359,7 +363,7 @@
     "uh = solve_elasticity(200, 200, options={\"ksp_type\": \"cg\", \n",
     "                                         \"ksp_max_it\": 100, \n",
     "                                         \"pc_type\": \"gamg\",\n",
-    "                                         \"mat_type\": \"aij\",\n",
+    "                                         \"mg_levels_pc_type\": \"sor\",\n",
     "                                         \"ksp_converged_reason\": None})"
    ]
   },
