back to no changes...

--- a/05-mixed-poisson.ipynb
+++ b/05-mixed-poisson.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aVlEyrlGvXp2"
+        "id": "zV1cLo3FBBpD"
       },
       "source": [
         "# Systems of more than one variable\n",
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "E53VHW55vXp7"
+        "id": "p5eAUwE-BBpK"
       },
       "source": [
         "## Problem setup\n",
@@ -61,7 +61,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0a5r6knCvXp9"
+        "id": "LPS4FTO5BBpO"
       },
       "source": [
         "As should be familiar by now, we start by importing the Firedrake package and setting up the discrete problem domain."
@@ -69,9 +69,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "id": "0658fNgcvXp-"
+        "id": "5B_8a7CBBBpQ"
       },
       "outputs": [],
       "source": [
@@ -84,16 +84,14 @@
         "    import firedrake\n",
         "except ImportError:\n",
         "    !wget \"https://fem-on-colab.github.io/releases/firedrake-install-real.sh\" -O \"/tmp/firedrake-install.sh\" && bash \"/tmp/firedrake-install.sh\"\n",
-        "    import firedrake\n",
-        "\n",
-        "from firedrake import *"
+        "    import firedrake"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
-        "id": "jmZ4mZv1vXp_"
+        "id": "1puWUSsuBBpT"
       },
       "outputs": [],
       "source": [
@@ -107,7 +105,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CwjuKh6dvXqA"
+        "id": "mGcn9sOmBBpV"
       },
       "source": [
         "We need to choose an LBB-stable finite element pair for $W = V\\times\\Sigma$, one choice is the Raviart-Thomas space of degree $k$ for $\\Sigma$ and discontinuous polynomials of degree $k$ for $V$, here we choose $k = 1$."
@@ -115,28 +113,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 201
-        },
-        "id": "EyVXY8lGvXqA",
-        "outputId": "db1de22f-939d-4e9c-806c-ed1e12bc2d9c"
+        "id": "4IxO4TzABBpW"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-bb5f3b5e2438>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFiniteElement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Raviart-Thomas\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtriangle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvariant\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"integral\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mSigma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFunctionSpace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmesh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mV\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFunctionSpace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmesh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"DG\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'FiniteElement' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "rt = FiniteElement(\"Raviart-Thomas\", triangle, 2, variant=\"integral\")\n",
         "Sigma = FunctionSpace(mesh, rt)\n",
@@ -146,7 +127,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "26_zsGDqvXqB"
+        "id": "cPZMieJbBBpZ"
       },
       "source": [
         "Note that Firedrake inherits the convention from FEniCS that the specified element degree is the degree of the smallest polynomial space that spans the space of the element.  The lowest order Raviart-Thomas element contains all the constants and some linear functions, hence we specify degree 1.\n",
@@ -158,7 +139,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "h__CLwzrvXqD"
+        "id": "RYgWoSnyBBpb"
       },
       "outputs": [],
       "source": [
@@ -171,7 +152,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UTfh8VxVvXqF"
+        "id": "U8O50FTIBBpe"
       },
       "source": [
         "The forcing function $f$ is created as an expression, and we're ready to set up the variational problem."
@@ -181,7 +162,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UvXPZFUfvXqF"
+        "id": "ykPilIvwBBpg"
       },
       "outputs": [],
       "source": [
@@ -195,7 +176,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "85rk3342vXqG"
+        "id": "tUzAt0ujBBpj"
       },
       "source": [
         "We need a solution variable, and then we can solve the problem. The problem is symmetric, but indefinite, so we can use the MINRES Krylov method."
@@ -205,7 +186,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6pYvIVtrvXqG"
+        "id": "Or4_uIPDBBpk"
       },
       "outputs": [],
       "source": [
@@ -216,7 +197,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cAzZnPx4vXqH"
+        "id": "2q-s9AQEBBpm"
       },
       "source": [
         "Let's have a look at the solution.\n",
@@ -229,7 +210,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RMZeDBt-vXqI"
+        "id": "-ics4jLvBBpn"
       },
       "outputs": [],
       "source": [
@@ -251,7 +232,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U_rq7idTvXqK"
+        "id": "0gOTJuKPBBpo"
       },
       "source": [
         "## Improving the solver performance\n",
@@ -269,7 +250,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "wKzeNUePvXqL"
+        "id": "p9n5MbMPBBpp"
       },
       "outputs": [],
       "source": [
@@ -298,7 +279,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "niEVMzJ6vXqM"
+        "id": "s2Lbv7tPBBpq"
       },
       "source": [
         "Let's try solving the problem using MINRES with incomplete Cholesky as a preconditioner."
@@ -308,7 +289,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "puO7WlwLvXqN"
+        "id": "MeXiyaL-BBps"
       },
       "outputs": [],
       "source": [
@@ -329,7 +310,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UNto2-q3vXqP"
+        "id": "2_0C-VB4BBps"
       },
       "source": [
         "### Schur complement approaches\n",
@@ -385,7 +366,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "G5bY2qD7vXqQ"
+        "id": "asivRskVBBpt"
       },
       "outputs": [],
       "source": [
@@ -416,7 +397,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VEMRdY4SvXqQ"
+        "id": "qucvGVldBBpt"
       },
       "source": [
         "Great, we got good algorithmic convergence.  Unfortunately, this is still very slow.  This is because the Schur complement operator $S$ is effectively an elliptic operator and we're inverting it with an unpreconditioned Krylov method."
@@ -425,7 +406,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LN6B5lzlvXqR"
+        "id": "KjRXl2UhBBpu"
       },
       "source": [
         "## PETSc options, an aside\n",
@@ -447,7 +428,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R74B_jHQvXqS"
+        "id": "kB-ZxChyBBpv"
       },
       "source": [
         "## Exercise\n",
@@ -461,7 +442,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UOucRIh8vXqT"
+        "id": "H-4X7HdABBpw"
       },
       "outputs": [],
       "source": [
@@ -471,7 +452,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3EjjiMfvvXqV"
+        "id": "oexZSsKJBBpx"
       },
       "source": [
         "## Providing an approximation to $S$\n",
@@ -483,7 +464,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VG0sMM7JvXqV"
+        "id": "vAcv71AFBBpy"
       },
       "outputs": [],
       "source": [
@@ -518,7 +499,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zuh2mpxuvXqX"
+        "id": "CfM7JZtGBBpz"
       },
       "source": [
         "We could now think about reducing the tolerance on the inner solves, reducing the accuracy of the approximation inverses.  For example, approximating $A^{-1}$ and $S^{-1}$ purely by the application of the preconditioner."
@@ -528,7 +509,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VfvyPPftvXqY"
+        "id": "OG6LvVsHBBp0"
       },
       "outputs": [],
       "source": [
@@ -560,7 +541,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PK0RHxL0vXqY"
+        "id": "k3mStXzbBBp0"
       },
       "source": [
         "Developing efficient solvers for block systems using this approach is quite an experimental science.  The best approach will vary depending on how good the preconditioners you have available for the individual blocks are, how many degrees of freedom the system has, any coefficient variations, the tolerance to which you wish to solve the problem, and probably many more.\n",
@@ -572,7 +553,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XYeNNcRAvXqY"
+        "id": "V85UvMfWBBp1"
       },
       "outputs": [],
       "source": [
