add firedrake import *

--- a/05-mixed-poisson.ipynb
+++ b/05-mixed-poisson.ipynb
@@ -84,7 +84,9 @@
         "    import firedrake\n",
         "except ImportError:\n",
         "    !wget \"https://fem-on-colab.github.io/releases/firedrake-install-real.sh\" -O \"/tmp/firedrake-install.sh\" && bash \"/tmp/firedrake-install.sh\"\n",
-        "    import firedrake"
+        "    import firedrake\n",
+        "\n",
+        "from firedrake import *"
       ]
     },
     {
