Tweaks to elasticity tutorial

--- a/03-elasticity.ipynb
+++ b/03-elasticity.ipynb
@@ -54,11 +54,47 @@
     "    import firedrake\n",
     "except ImportError:\n",
     "    !wget \"https://fem-on-colab.github.io/releases/firedrake-install-real.sh\" -O \"/tmp/firedrake-install.sh\" && bash \"/tmp/firedrake-install.sh\"\n",
-    "    import firedrake\n",
-    "from firedrake import *\n",
+    "    import firedrake"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To begin, we import Firedrake and define a mesh of a rectangular domain comprised of triangular elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from firedrake import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "length = 1\n",
     "width = 0.2\n",
     "mesh = RectangleMesh(40, 20, length, width)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "fig, axes = plt.subplots()\n",
+    "triplot(mesh, axes=axes)\n",
+    "axes.set_aspect(\"equal\")\n",
+    "axes.legend(loc=\"upper center\", bbox_to_anchor=(0.5, 1.35), ncol=4);"
    ]
   },
   {
@@ -191,7 +227,8 @@
     "# NBVAL_IGNORE_OUTPUT\n",
     "fig, axes = plt.subplots()\n",
     "triplot(displaced_mesh, axes=axes)\n",
-    "axes.set_aspect(\"equal\");"
+    "axes.set_aspect(\"equal\")\n",
+    "axes.legend(ncol=2);"
    ]
   },
   {
@@ -386,7 +423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
