--- a/06-pde-constrained-optimisation.ipynb
+++ b/06-pde-constrained-optimisation.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,28 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "error code 65\n[0] PetscViewerFileSetName() at /home/joe/software/firedrake/src/petsc/src/sys/classes/viewer/impls/ascii/filev.c:649\n[0] PetscViewerFileSetName_ASCII() at /home/joe/software/firedrake/src/petsc/src/sys/classes/viewer/impls/ascii/filev.c:753\n[0] Unable to open file\n[0] Cannot open PetscViewer file: stokes-control.msh",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mError\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4031/2799237194.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmesh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMesh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"stokes-control.msh\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mPETSc/Log.pyx\u001b[0m in \u001b[0;36mpetsc4py.PETSc.Log.EventDecorator.decorator.wrapped_func\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mPETSc/Log.pyx\u001b[0m in \u001b[0;36mpetsc4py.PETSc.Log.EventDecorator.decorator.wrapped_func\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/software/firedrake/src/firedrake/firedrake/mesh.py\u001b[0m in \u001b[0;36mMesh\u001b[0;34m(meshfile, **kwargs)\u001b[0m\n\u001b[1;32m   1939\u001b[0m             \u001b[0mopts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOptionsManager\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1940\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mopts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minserted_options\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1941\u001b[0;31m                 \u001b[0mplex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_from_gmsh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeshfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1942\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'.node'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1943\u001b[0m             \u001b[0mplex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_from_triangle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeshfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgeometric_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mPETSc/Log.pyx\u001b[0m in \u001b[0;36mpetsc4py.PETSc.Log.EventDecorator.decorator.wrapped_func\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mPETSc/Log.pyx\u001b[0m in \u001b[0;36mpetsc4py.PETSc.Log.EventDecorator.decorator.wrapped_func\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/software/firedrake/src/firedrake/firedrake/mesh.py\u001b[0m in \u001b[0;36m_from_gmsh\u001b[0;34m(filename, comm)\u001b[0m\n\u001b[1;32m    228\u001b[0m     \u001b[0mgmsh_viewer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ascii\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m     \u001b[0mgmsh_viewer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetFileMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m     \u001b[0mgmsh_viewer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetFileName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m     \u001b[0mgmsh_plex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPETSc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDMPlex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateGmsh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgmsh_viewer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcomm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mPETSc/Viewer.pyx\u001b[0m in \u001b[0;36mpetsc4py.PETSc.Viewer.setFileName\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mError\u001b[0m: error code 65\n[0] PetscViewerFileSetName() at /home/joe/software/firedrake/src/petsc/src/sys/classes/viewer/impls/ascii/filev.c:649\n[0] PetscViewerFileSetName_ASCII() at /home/joe/software/firedrake/src/petsc/src/sys/classes/viewer/impls/ascii/filev.c:753\n[0] Unable to open file\n[0] Cannot open PetscViewer file: stokes-control.msh"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mesh = Mesh(\"stokes-control.msh\")"
    ]
@@ -144,10 +125,10 @@
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
     "fig, axes = plt.subplots()\n",
-    "triplot(mesh, axes=axes)\n",
+    "triplot(mesh, axes=axes, boundary_kw={\"linewidth\": 2.5})\n",
     "axes.axis(\"off\")\n",
     "axes.set_aspect(\"equal\")\n",
-    "axes.legend(loc=\"upper right\");"
+    "axes.legend(loc=\"upper center\", bbox_to_anchor=(0.5, 1.25), ncol=5);"
    ]
   },
   {
@@ -338,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Jhat(g) = %.8g\\nJhat(g_opt) = %.8g\" % (Jhat(g), Jhat(g_opt)))"
+    "print(f\"Jhat(g) = {Jhat(g):.8g}\\nJhat(g_opt) = {Jhat(g_opt):.8g}\")"
    ]
   },
   {
