Solutions for elasticity tutorial

--- a/03-elasticity.ipynb
+++ b/03-elasticity.ipynb
@@ -248,7 +248,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x, y = SpatialCoordinate(mesh)\n",
+    "rho = Constant(0.01) + x * y\n",
+    "f = as_vector([0, -rho*g])\n",
+    "L = dot(f, v)*dx\n",
+    "\n",
+    "uh = Function(V)\n",
+    "solve(a == L, uh, bcs=bc, solver_parameters={\"ksp_monitor\": None})\n",
+    "\n",
+    "displaced_coordinates = interpolate(SpatialCoordinate(mesh) + uh, V)\n",
+    "displaced_mesh = Mesh(displaced_coordinates)\n",
+    "\n",
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "fig, axes = plt.subplots()\n",
+    "triplot(displaced_mesh, axes=axes)\n",
+    "axes.set_aspect(\"equal\")\n",
+    "axes.legend(ncol=2);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,6 +428,23 @@
     "## Exercise\n",
     "\n",
     "Study what happens to the number of iterations for this last setup as you change the mesh resolution.  Try, perhaps, 10, 50, 100, and 200."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = {\n",
+    "    \"ksp_type\": \"cg\", \n",
+    "    \"ksp_max_it\": 100, \n",
+    "    \"pc_type\": \"gamg\",\n",
+    "    \"mg_levels_pc_type\": \"sor\",\n",
+    "    \"ksp_converged_reason\": None,\n",
+    "}\n",
+    "for n in [10, 25, 50, 75, 100, 125, 150, 175, 200]:\n",
+    "    solve_elasticity(n, n, options=sp)"
    ]
   },
   {
