Solutions for Stokes tutorial

--- a/06-pde-constrained-optimisation.ipynb
+++ b/06-pde-constrained-optimisation.ipynb
@@ -393,6 +393,119 @@
     "\n",
     "How does it affect the solution before and after optimisation? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimise_stokes(inflow_velocity):\n",
+    "    inflow = DirichletBC(W.sub(0), interpolate(u_inflow, V), 1)\n",
+    "    static_bcs = [inflow, noslip]\n",
+    "    bcs = static_bcs + controlled_bcs\n",
+    "    \n",
+    "    sp = {\n",
+    "        \"mat_type\": \"aij\",\n",
+    "        \"ksp_type\": \"preonly\",\n",
+    "        \"pc_type\": \"lu\",\n",
+    "        \"pc_factor_shift_type\": \"inblocks\",\n",
+    "    }\n",
+    "    solve(a == L, w, bcs=bcs, solver_parameters=sp)\n",
+    "    \n",
+    "    u, p = split(w)\n",
+    "    J = assemble(1./2*inner(grad(u), grad(u))*dx + alpha/2*inner(g, g)*ds(4))\n",
+    "    m = Control(g)\n",
+    "    Jhat = ReducedFunctional(J, m)\n",
+    "    g_opt = minimize(Jhat)\n",
+    "    print(f\"Jhat(g) = {Jhat(g):.8g}\\nJhat(g_opt) = {Jhat(g_opt):.8g}\")\n",
+    "    \n",
+    "    g.assign(g_opt)\n",
+    "    w_opt = Function(W)\n",
+    "    solve(a == L, w_opt, bcs=bcs, solver_parameters=sp, annotate=False)\n",
+    "    \n",
+    "    return w, g_opt, w_opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_inflow = as_vector([y ** 2 * (10-y)/125.0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w, g_opt, w_opt = optimise_stokes(u_inflow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "u_init, p_init = w.split()\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=2, sharex=True, sharey=True)\n",
+    "streamlines = streamplot(u_init, resolution=1/3, seed=0, axes=axes[0])\n",
+    "fig.colorbar(streamlines, ax=axes[0], fraction=0.046)\n",
+    "axes[0].set_aspect(\"equal\")\n",
+    "axes[0].set_title(\"Velocity\")\n",
+    "\n",
+    "contours = tricontourf(p_init, 30, axes=axes[1])\n",
+    "fig.colorbar(contours, ax=axes[1], fraction=0.046)\n",
+    "axes[1].set_aspect(\"equal\")\n",
+    "axes[1].set_title(\"Pressure\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "fig, axes = plt.subplots()\n",
+    "arrows = quiver(g_opt, axes=axes, scale=3)\n",
+    "axes.set_aspect(\"equal\")\n",
+    "axes.set_title(\"Optimised boundary value\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "u_opt, p_opt = w_opt.split()\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=2, sharex=True, sharey=True)\n",
+    "streamlines = streamplot(u_opt, resolution=1/3, seed=0, axes=axes[0])\n",
+    "fig.colorbar(streamlines, ax=axes[0], fraction=0.046)\n",
+    "axes[0].set_aspect(\"equal\")\n",
+    "axes[0].set_title(\"Optimized velocity\")\n",
+    "\n",
+    "contours = tricontourf(p_opt, 30, axes=axes[1])\n",
+    "fig.colorbar(contours, ax=axes[1], fraction=0.046)\n",
+    "axes[1].set_aspect(\"equal\")\n",
+    "axes[1].set_title(\"Optimized pressure\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
